[CAMEL-12818] Remove deprecated stuff